--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,1 +1,7 @@
-<p>menu-bar works!</p>
+<div class="container__menu-bar">
+  <a title="logo" href="#"></a>
+  <img src="./src/assets/icons/logo.png" alt="a">
+  <div class="div"></div>
+  <div class="div"></div>
+</div>
+
