Menu and card html

--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,1 +1,5 @@
-<p>big-card works!</p>
+<div class="container__big-card">
+  <p>Featured</p>
+  <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium, assumenda debitis vo</h4>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet ad rerum voluptates cupiditate. Libero ex unde labore temporibus ratione, sit accusantium perspiciatis hic maxime laborum doloribus at consequatur aliquam esse?</p>
+</div>
