--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,7 +1,14 @@
 <div class="container__menu-bar">
-  <a title="logo" href="#"></a>
-  <img src="./src/assets/icons/logo.png" alt="a">
-  <div class="div"></div>
-  <div class="div"></div>
+  <div class="container_logo">
+    <a title="logo" href="#"><img src="/assets/icons/logo.png" alt="logo">Fal<span>Blog</span></a>
+  </div>
+  <div class="container_options">
+    <a href="">Home</a>
+    <a href="">Sobre</a>
+  </div>
+  <div class="container_buttons">
+    <button>Registrar-se</button>
+    <button>Entrar</button>
+  </div>
 </div>
 
