--- a/src/app/components/recent-section/recent-section.component.html
+++ b/src/app/components/recent-section/recent-section.component.html
@@ -1,1 +1,5 @@
-<p>recent-section works!</p>
+<section class="container__recent-section">
+  <app-small-card></app-small-card>
+  <app-small-card></app-small-card>
+  <app-small-card></app-small-card>
+</section>
