--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,2 @@
-<app-menu-bar></app-menu-bar>
-<app-big-card></app-big-card>
-<app-recent-section></app-recent-section>
-<app-footer></app-footer>
-
+<app-home></app-home>
 <router-outlet />
