--- a/src/app/components/menu-bar/menu-bar.component.css
+++ b/src/app/components/menu-bar/menu-bar.component.css
@@ -1,5 +1,11 @@
 .container__menu-bar {
   display: flex;
-  justify-content: center;
+  width: 90vw;
+  justify-content: space-around;
   align-items: center;
+
+}
+
+span {
+  color: red;
 }
