--- a/src/app/components/recent-section/recent-section.component.html
+++ b/src/app/components/recent-section/recent-section.component.html
@@ -1,5 +1,15 @@
 <section class="container__recent-section">
-  <app-small-card></app-small-card>
-  <app-small-card></app-small-card>
-  <app-small-card></app-small-card>
+  <h4>Recentes</h4>
+  <div class="container_small-card">
+    <app-small-card></app-small-card>
+    <app-small-card></app-small-card>
+    <app-small-card></app-small-card>
+    <app-small-card></app-small-card>
+    <app-small-card></app-small-card>
+    <app-small-card></app-small-card>
+    <app-small-card></app-small-card>
+    <app-small-card></app-small-card>
+    <app-small-card></app-small-card>
+  </div>
+
 </section>
