--- a/src/app/components/recent-section/recent-section.component.css
+++ b/src/app/components/recent-section/recent-section.component.css
@@ -1,5 +1,10 @@
 .container__recent-section {
   display: flex;
-  flex-wrap: wrap;
-  gap: 2% ;
+  flex-direction: column;
+}
+.container_small-card {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-auto-rows: 1fr 1fr 1fr;
+  gap: 10px;
 }
