--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -1,1 +1,9 @@
-<div></div>
+<div>
+  <img src="{{ img }}" alt="Image-news">
+  <h5>{{ title }}</h5>
+  <p>{{ description }}</p>
+  <div>
+    <img src="{{ imgPerson }}" alt="image-person">
+    <p>{{ namePerson }}</p>
+  </div>
+</div>
