--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -1,8 +1,8 @@
-<div>
+<div class="container__small-card">
   <img src="{{ img }}" alt="Image-news">
   <h5>{{ title }}</h5>
   <p>{{ description }}</p>
-  <div>
+  <div class="container_person">
     <img src="{{ imgPerson }}" alt="image-person">
     <p>{{ namePerson }}</p>
   </div>
