--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -11,7 +11,7 @@
     }
   </div>
   <div class="container_logo">
-    <a title="logo" href="#"><img src="/assets/icons/logo.png" alt="logo">Fal<span>Blog</span></a>
+    <a title="logo" href="#"><img src="/assets/images/logo-white.png" alt="logo">Fal<span>Blog</span></a>
     <p> &#64;2077 Empresa. Todos os direitos reservados</p>
   </div>
 </footer>
