--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,6 +1,6 @@
 <div class="container__menu-bar">
   <div class="container_logo">
-    <a title="logo" href="#"><img src="/assets/icons/logo.png" alt="logo">Fal<span>Blog</span></a>
+    <a title="logo" href="#"><img src="/assets/images/logo-black.png" alt="logo">Fal<span>Blog</span></a>
   </div>
   <div class="container_options">
     <a href="">Home</a>
