--- a/src/app/components/recent-section/recent-section.component.css
+++ b/src/app/components/recent-section/recent-section.component.css
@@ -1,10 +1,26 @@
 .container__recent-section {
   display: flex;
   flex-direction: column;
+  margin-bottom: 2%;
 }
 .container_small-card {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-auto-rows: 1fr 1fr 1fr;
-  gap: 10px;
+  gap: 2%;
 }
+
+@media screen and (max-width: 1224px){
+  .container_small-card {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media screen and (max-width: 786px){
+  .container_small-card {
+    grid-template-columns: repeat(auto-fill, 100%);
+    gap: 0;
+  }
+}
+
+
