--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -11,7 +11,10 @@
     }
   </div>
   <div class="container_logo">
-    <a title="logo" href="#"><img src="/assets/images/logo-white.png" alt="logo">Fal<span>Blog</span></a>
+    <div>
+      <img src="/assets/images/logo-white.png" alt="logo">
+      <a title="logo" href="#">Flow IA</a>
+    </div>
     <p> &#64;2077 Empresa. Todos os direitos reservados</p>
   </div>
 </footer>
