--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,10 @@
   font-family: 'Roboto', sans-serif;
 }
 
-body::-webkit-scrollbar {
-  display: none;
+body::-webkit-scrollbar-thumb {
+  background-color: black;
 }
+body::-webkit-scrollbar {
+  width: 2px;
+}
+
