--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -6,6 +6,7 @@
   <div class="container_options">
     <a href="">Home</a>
     <a href="">Sobre</a>
+    <a href="">Blog</a>
   </div>
   <div class="container_buttons">
     <button>Registrar-se</button>
