--- a/src/app/components/recent-section/recent-section.component.css
+++ b/src/app/components/recent-section/recent-section.component.css
@@ -8,6 +8,19 @@
   grid-template-columns: 1fr 1fr 1fr;
   grid-auto-rows: 1fr 1fr 1fr;
 }
+button {
+  color: #fff;
+  border: 0;
+  cursor: pointer;
+  border-radius: 9px;
+  font-weight: 500;
+  padding: 8px;
+  font-size: 1.1rem;
+  width: 100px;
+  background: #050505;
+  align-self: center;
+  box-shadow: -50px -50px 100px #1f1f1f,  50px 50px 100px #242424;
+}
 
 @media screen and (max-width: 1224px){
   .container_small-card {
