--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -6,7 +6,11 @@ footer {
   color: #fff;
   background-color: #050505;
   width: 99.9vw;
-  border: 1px solid red;
+  gap: 15px;
+  padding: 1.7% 0;
+}
+footer h4 {
+  font-size: 1.5rem;
 }
 .container_links {
   width: 100%;
