--- a/src/app/components/small-card/small-card.component.css
+++ b/src/app/components/small-card/small-card.component.css
@@ -1,12 +1,13 @@
 .container__small-card {
   margin-top: 5%;
   padding: 0 12px;
-  cursor: pointer;
 }
 .container__small-card img {
   height: auto;
   width: 380px;
   border-radius: 10px;
+  box-shadow: 0px -1px 29px #d5d5d5, 0px 28px 39px #ebebeb;
+
 }
 
 .container_person {
