added button back to home

--- a/src/app/pages/content/content.component.html
+++ b/src/app/pages/content/content.component.html
@@ -1,4 +1,5 @@
 <div class="container__content">
+  <a href="">Voltar</a>
   <div class="container__cover">
     <img src="https://th.bing.com/th/id/R.18d5fc26b91678ce86235cd7dc8c248b?rik=lE1K65Q6L3Qtag&riu=http%3a%2f%2fwww.dicasuteisbrasil.com.br%2fwp-content%2fuploads%2f2017%2f08%2fimagens-em-alta-resolu%C3%A7%C3%A3o.jpg&ehk=%2fMl03ZakAJZ3%2baVs7vvMgoPUClwYhT0Lv2UJtRCjSyk%3d&risl=&pid=ImgRaw&r=0" alt="">
   </div>
