Added style to Recent news

--- a/src/app/components/recent-section/recent-section.component.html
+++ b/src/app/components/recent-section/recent-section.component.html
@@ -1,5 +1,5 @@
 <section class="container__recent-section">
-  <h4>Recentes</h4>
+  <h4>Notícias recentes</h4>
 
   <div class="container_small-card">
     @for (noticia of recents.news; track $index) {
@@ -12,7 +12,6 @@
       ></app-small-card>
     }
   </div>
-
   <button>Ver mais</button>
 
 </section>
