--- a/src/app/pages/content/content.component.html
+++ b/src/app/pages/content/content.component.html
@@ -1,5 +1,5 @@
 <div class="container__content">
-  <a [routerLink]="'/about'"
+  <a [routerLink]="'/'"
      [routerLinkActive]="'ativo'"
   >Voltar</a>
   <div class="container__cover">
