--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,9 +2,6 @@
   <app-big-card #bigCard></app-big-card>
 
   @defer (on viewport(bigCard)) {
-    <app-recent-section #recentSection></app-recent-section>
-    @defer (on viewport(recentSection)) {
-      <app-footer></app-footer>
-    }
+    <app-recent-section></app-recent-section>
   }
 </div>
