--- a/src/app/components/recent-section/recent-section.component.css
+++ b/src/app/components/recent-section/recent-section.component.css
@@ -1,7 +1,11 @@
 .container__recent-section {
+  margin-top: 5%;
   display: flex;
   flex-direction: column;
   margin-bottom: 2%;
+}
+.container__recent-section h4{
+  font-size: 2rem;
 }
 .container_small-card {
   display: grid;
