--- a/src/app/components/menu-bar/menu-bar.component.css
+++ b/src/app/components/menu-bar/menu-bar.component.css
@@ -1,6 +1,6 @@
 .container__menu-bar {
   display: flex;
-  width: 99.9vw;
+  width: 100%;
   justify-content: space-around;
   align-items: center;
   margin: 15px 0;
